--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
-name: Lucy and Tom, Whale Magnets
+# theme: jekyll-theme-cayman
+title: Lucy and Tom, Whale Magnets
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
